# tataru-py

./: .gitignore  README.md  pyproject.toml
src/tataru/: __init__.py  __main__.py  bot.py  models.py
